# Computer-Vision

./: .gitignore
FinalProject/: .clang-format  .clang-tidy  CMakeLists.txt
FinalProject/include/: Image.hpp  Log.hpp  Rect.hpp  TreeDetector.hpp  TreeDetectorTrainer.hpp  Window.hpp  utility.hpp
FinalProject/report/: FinalProject.aux  FinalProject.out  FinalProject.tex
FinalProject/src/: Image.cpp  Log.cpp  TreeDetector.cpp  TreeDetectorTrainer.cpp  Window.cpp  prj_main.cpp  utility.cpp
HW1/: CMakeLists.txt
HW1/include/: hw1.hpp  hw1_image_proc.hpp
HW1/src/: hw1_image_proc.cpp  hw1_main.cpp
Lab2/: .clang-tidy  CMakeLists.txt  README.txt
Lab2/include/: CameraCalibrator.hpp  lab2.hpp
Lab2/report/: Lab2Report.aux  Lab2Report.out  Lab2Report.tex
Lab2/src/: CameraCalibrator.cpp  lab2.cpp  lab2_main.cpp
Lab3/: .clang-tidy  CMakeLists.txt  CMakeSettings.json
Lab3/include/: Filter.h  FilterComparator.hpp  HistEqualiser.hpp  Morph.hpp  lab3.hpp
Lab3/src/: FilterComparator.cpp  HistEqualiser.cpp  Morph.cpp  filter.cpp  lab3.cpp  lab3_main.cpp
Lab4/: CMakeLists.txt  CMakeSettings.json  README.txt  compile_commands.json
Lab4/include/: Canny.hpp  CircleHough.hpp  ImgProcessor.hpp  LineHough.hpp  StreetAnaliser.hpp  lab4.hpp
Lab4/report/: Lab4Report.aux  Lab4Report.out  Lab4Report.tex
Lab4/src/: Canny.cpp  CircleHough.cpp  ImgProcessor.cpp  LineHough.cpp  StreetAnaliser.cpp  lab4.cpp  lab4_main.cpp
Lab5/: CMakeLists.txt
Lab5/include/: PanoramicImage.hpp  lab5.hpp  panoramic_utils.h
Lab5/report/: Lab5Report.aux  Lab5Report.out  Lab5Report.tex
Lab5/src/: PanoramicImage.cpp  lab5.cpp  lab5_main.cpp
Lab7/: Lab7.sln
Lab7/Lab7/: Lab7.pyproj  emnist_for_students.py
